# botify

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/agents/: factory.py
bot/agents/tools/: translator.py
bot/configs/: loader.py
bot/configs/data/: translator.yml
bot/management/commands/: runbot.py
bot/telegram/: bot.py  handlers.py
bots/: echo_bot.py  models.py  researcher_bot.py  utils.py
bots/management/commands/: createbot.py  runbot.py  setup_webhook.py
bots/migrations/: 0001_initial.py
bots/modules/mybot/: bot.py  config.py  handlers.py
bots/modules/researcher/: bot.py  config.py  handlers.py
core/: settings.py
deployment/: deploy.sh
deployment/aws/: main.tf  outputs.tf  variables.tf
docker/: Dockerfile
src/botify/: __init__.py  __main__.py  app.py  main.py  voice_assistant.py
src/botify/agent/: agent_base.py  agent_factory.py  agent_tool.py  agent_tools.py  factory.py  rag.py  rag_agent.py
src/botify/agent/agents/: base_agent.py  chat_agent.py  reader_agent.py  readme.md  researcher_agent.py
src/botify/api/: router.py
src/botify/api/v1/: chat.py
src/botify/handlers/: base.py  bot_handler.py
src/botify/logging/: logger.py
src/botify/models/: agent_session.py
src/botify/scraper/: scraper.py
src/botify/services/: agent_service.py
tests/: test_agent_factory.py  test_rag.py  test_scraper.py
tests/fixtures/: agent_configs.yaml
tests/units/: test_ageng_service.py  test_agent_factory.py  test_rag.py  test_researcher.py  test_scraper.py
(+1 files in other folders)
