[project]
name = "botify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.8.1",
    "fastapi>=0.115.6",
    "pydantic>=2.10.3",
    "uvicorn>=0.32.1",
    "typer>=0.15.1",
    "python-telegram-bot>=21.8",
]

[project.scripts]
botify = "botify.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
